Fix index redirect

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang = "en">
     <head>
         <meta charset="utf-8">
-        <meta http-equiv="refresh" content="0; url=/ica4/">
+        <meta http-equiv="refresh" content="0; url=/ica4a.html">
         <title>ICA 4</title>
     </head>
     <body>
