--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html lang = "en">
     <head>
         <meta charset="utf-8">
-        <meta http-equiv="refresh" content="0; url=/ica4a.html">
-        <title>ICA 4</title>
+        <title>Index Home</title>
     </head>
     <body>
-        <p>Redirecting to ICA 4..</p>
+        <p>Hello World</p>>
     </body>
 </html>
