--- a/wa/assessment-files/index.html
+++ b/wa/assessment-files/index.html
@@ -18,19 +18,20 @@
       <font size="7">Welcome to our wildlife website</font>
     </header>
 
-    <nav>
-      <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Our team</a></li>
-        <li><a href="#">Projects</a></li>
-        <li><a href="#">Blog</a></li>
-      </ul>
+   <nav aria-label="Main navigation">
+  <ul>
+    <li><a href="#">Home</a></li>
+    <li><a href="#">Our team</a></li>
+    <li><a href="#">Projects</a></li>
+    <li><a href="#">Blog</a></li>
+  </ul>
 
-      <form class="search">
-        <input type="search" name="q" placeholder="Search query">
-        <input type="submit" value="Go!">
-      </form>
-    </nav>
+  <form class="search">
+    <label for="search">Search</label>
+    <input type="search" id="search" name="q" placeholder="Search query">
+    <input type="submit" value="Go">
+  </form>
+</nav>
 
     <main>
       <article>
@@ -48,20 +49,25 @@
         <br><br>
         Bears can also be classified in terms of their habitat — both large and medium bears are just as at home in urban areas as they are in the countryside. Different habitats encourange different behaviour however, as you'll find out below. The below table also gives you some useful facts about bears.
         <br><br>
-        <table>
+       <table>
+          <caption>
+            Comparison of wild and urban bears, including coat, size, habitat, lifespan, and diet.
+          </caption>
+
           <thead>
             <tr>
-              <td>Bear Type</td>
-              <td>Coat</td>
-              <td>Adult size</td>
-              <td>Habitat</td>
-              <td>Lifespan</td>
-              <td>Diet</td>
+              <th scope="col">Bear type</th>
+              <th scope="col">Coat</th>
+              <th scope="col">Adult size</th>
+              <th scope="col">Habitat</th>
+              <th scope="col">Lifespan</th>
+              <th scope="col">Diet</th>
             </tr>
           </thead>
+
           <tbody>
             <tr>
-              <td>Wild</td>
+              <th scope="row">Wild</th>
               <td>Brown or black</td>
               <td>1.4 to 2.8 meters</td>
               <td>Woods and forests</td>
@@ -69,7 +75,7 @@
               <td>Fish, meat, plants</td>
             </tr>
             <tr>
-              <td>Urban</td>
+              <th scope="row">Urban</th>
               <td>North Face</td>
               <td>18 to 22</td>
               <td>Condos and coffee shops</td>
@@ -83,11 +89,21 @@
         <br><br>
         Wild bears eat a variety of meat, fish, fruit, nuts, and other natually growing ingredients. In general they will hunt for food themselves in woodland or rivers, but at a push they will track down their sustenance from farms or country houses. They tend to live in relative isolation, in caves, tents, or cottages.
         <br><br>
-        <img src="media/wild-bear.jpg" alt="Large wild brown bear standing in a river.">
+        <figure>
+          <img 
+            src="media/wild-bear.jpg" 
+            alt="A wild brown bear standing in a river, catching fish in its natural habitat.">
+          <figcaption>Wild bears typically hunt for food in rivers and woodland areas.</figcaption>
+        </figure>
         <br><br>
         Urban (gentrified) bears on the other hand have largely abandoned the old ways. They will hunt other urban creatures if necessary (including other predators like rats and foxes), but prefer to scavenge from readily available urban food outlets like dumpsters, bins, and fast food joints. When food has proven scarce, urban bears have even been known to break into people's kitchens and steal essentials like baked beans, ready meals, and microwave ovens.
         <br><br>
-        <img src="media/urban-bear.jpg" alt="Urban brown bear in a cage.">
+        <figure>
+          <img 
+            src="media/urban-bear.jpg" 
+            alt="An urban brown bear confined in a cage, illustrating the impact of city environments on bears.">
+          <figcaption>Urban bears often live close to humans and adapt to city environments.</figcaption>
+        </figure>
         <br><br>
         Urban bears will sleep anywhere they can, from bus shelters and parks, to the toilets in McDonalds, to their own apartment.
         <br><br>
@@ -97,13 +113,20 @@
         <br><br>
         The following audio clip contains a fact file providing more details about bear mating rituals, along with samples and quotes from experts.
         <br><br>
+        
+        <h3>Audio: Bear mating rituals</h3>
+
         <audio controls>
           <source src="media/bear.mp3" type="audio/mp3">
           <source src="media/bear.ogg" type="audio/ogg">
-          <p>It looks like your browser doesn't support HTML5 audio players.</p>
-          <p>Here is a <a href="../../media/bear.mp3"></a>link to the file</p>
-
         </audio>
+
+        <section aria-labelledby="transcript-heading">
+          <h4 id="transcript-heading">Transcript</h4>
+          <p>
+            Narrator: This isn't really an audio fact file about bears, but it is an audio file you can transcribe.
+          </p>
+        </section>
 
         <aside>
 
@@ -115,7 +138,9 @@
 
         </aside>
         <section class="comments">
-          <div class="show-hide">Show comments</div>
+         <button class="show-hide" aria-expanded="false">
+            Show comments
+          </button>
 
           <div class="comment-wrapper">
 
@@ -123,15 +148,16 @@
 
             <form class="comment-form">
               <div class="flex-pair">
-                Your name:
+                <label for="name">Your name:</label>
                 <input type="text" name="name" id="name" placeholder="Enter your name">
               </div>
+
               <div class="flex-pair">
-                Your comment:
+                <label for="comment">Your comment:</label>
                 <input type="text" name="comment" id="comment" placeholder="Enter your comment">
               </div>
-              <div>
 
+              <div>
                 <input type="submit" value="Submit comment">
               </div>
             </form>
@@ -174,4 +200,10 @@
     <script src="main.js"></script>
 
   </body>
+
+  <form class="search">
+  <label for="search" class="sr-only">Search the site</label>
+  <input type="search" id="search" name="q" placeholder="Search query">
+  <input type="submit" value="Go">
+</form>
 </html>
